# cann-ops-adv-vllm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  OAT.xml  OWNERS  README.md  SECURITYNOTE.md  aclnn_select_position.h  build.sh  classify_rule.yaml  install.sh  run_build.sh  version.info
cmake/: OWNERS  config.cmake  config_utest.cmake  func.cmake  func_examples.cmake  func_utest.cmake  intf.cmake  intf_pub.cmake  intf_pub_examples.cmake  intf_pub_utest.cmake
cmake/modules/: Findalog.cmake
cmake/scripts/: check_version_compatible.py  parse_changed_files.py
cmake/scripts/examples/: get_opapi_abs_path.py  get_soc_info.py
cmake/scripts/utest/: gen_coverage.py  gen_tiling_data_stub.py
docs/: ApplyRotaryPosEmb.md  DequantRopeQuantKvcache.md  FFN.md  FFNV2.md  FFNV3.md  FlashAttentionScore.md  FlashAttentionScoreGrad.md  FlashAttentionScoreGradV2.md  FlashAttentionScoreV2.md  FlashAttentionUnpaddingScoreGrad.md  FlashAttentionUnpaddingScoreGradV2.md  FlashAttentionVarLenScore.md  FlashAttentionVarLenScoreV2.md  FusedInferAttentionScore.md  FusedInferAttentionScoreV2.md  GroupedBiasAddGrad.md  GroupedMatmul.md  GroupedMatmulAdd.md  GroupedMatmulV2.md  GroupedMatmulV3.md  GroupedMatmulV4.md  IncreFlashAttention.md  IncreFlashAttentionV2.md  IncreFlashAttentionV3.md  IncreFlashAttentionV4.md  MatmulReduceScatter.md  MoeComputeExpertTokens.md  MoeFinalizeRouting.md  MoeFinalizeRoutingV2.md  MoeFinalizeRoutingV2Grad.md  MoeGatingTopKSoftmax.md  MoeGatingTopKSoftmaxV2.md  MoeInitRouting.md  MoeInitRoutingQuant.md  MoeInitRoutingQuantV2.md  MoeInitRoutingV2.md  MoeInitRoutingV2Grad.md  MoeTokenPermute.md  MoeTokenPermuteGrad.md  MoeTokenUnpermute.md  (+11 more)
docs/common/: FA-FAG算子设计介绍.md  FFN算子设计介绍.md  GroupedMatmul算子设计介绍.md  IFA算子设计介绍.md  PFA算子设计介绍.md  aclnn返回码.md  cmake编译参数说明.md  sparse_mode参数说明.md  两段式接口.md  数据格式.md  编译与运行样例.md  融合算子源码导读.md  非连续的Tensor.md
examples/mc2/all_gather_matmul/: test_all_gather_matmul.cpp
examples/mc2/inplace_matmul_all_reduce_add_rms_norm/: run_inplace_matmul_all_reduce_add_rms_norm_case.sh  test_inplace_matmul_all_reduce_add_rms_norm.cpp  test_inplace_quant_matmul_all_reduce_add_rms_norm.cpp  test_inplace_weight_quant_matmul_all_reduce_add_rms_norm.cpp
examples/mc2/matmul_all_reduce/: test_matmul_all_reduce.cpp  test_matmul_all_reduce_v2.cpp  test_quant_matmul_all_reduce.cpp  test_quant_matmul_all_reduce_v2.cpp  test_quant_matmul_all_reduce_v3.cpp  test_weight_quant_matmul_all_reduce.cpp
examples/mc2/matmul_all_reduce_add_rms_norm/: test_matmul_all_reduce_add_rms_norm.cpp  test_quant_matmul_all_reduce_add_rms_norm.cpp  test_weight_quant_matmul_all_reduce_add_rms_norm.cpp
examples/mc2/matmul_reduce_scatter/: run_matmul_reduce_scatter_case.sh  test_matmul_reduce_scatter.cpp
examples/mc2/moe_distribute_combine/: rank_table_m2.json  test_moe_distribute_combine.cpp
examples/mc2/moe_distribute_dispatch/: rank_table_m2.json  test_moe_distribute_dispatch.cpp
examples/transformer/: README.md
examples/transformer/apply_rotary_pos_emb/: test_apply_rotary_pos_emb.cpp
examples/transformer/dequant_rope_quant_kvcache/: test_dequant_rope_quant_kvcache.cpp
examples/transformer/ffn/: ffn_generate_data.py  ffn_print_result.py  ffn_utils.h  run_ffn_case.sh  test_ffn_v2.cpp  test_ffn_v3.cpp  test_ffn_v3_quant.cpp
examples/transformer/flash_attention_score/: test_flash_attention_score.cpp  test_flash_attention_varLen_score.cpp
examples/transformer/flash_attention_score_grad/: test_flash_attention_score_grad.cpp  test_flash_attention_unpadding_score_grad.cpp
examples/transformer/fused_infer_attention_score/: run_fia_case.sh  test_fused_infer_attention_score.cpp  test_fused_infer_attention_score_v2.cpp  test_fused_infer_attention_score_v2_ifa_Lse.cpp  test_fused_infer_attention_score_v2_ifa_PA.cpp  test_fused_infer_attention_score_v2_ifa_antiquant.cpp  test_fused_infer_attention_score_v2_ifa_leftpad.cpp  test_fused_infer_attention_score_v2_ifa_postquant.cpp  test_fused_infer_attention_score_v2_ifa_system_prefix.cpp  test_fused_infer_attention_score_v2_pfa_gqa.cpp  test_fused_infer_attention_score_v2_pfa_innerprecise2.cpp  test_fused_infer_attention_score_v2_pfa_left_padding.cpp  (+7 more)
extension/: IncreFlashAttentionV4.md  build.sh  setup.py
extension/csrc/: add_custom.cpp  function.h  pytorch_npu_helper.hpp  registration.cpp
extension/custom_ops/: __init__.py  add_custom.py
extension/custom_ops.egg-info/: PKG-INFO
extension/export/: ifa_v5_case.py
misc/: aclnn_cent_select.h  aclnn_compute_cent.h  aclnn_select_position.h
src/transformer/compute_cent/ophost/: CMakeLists.txt  aclnn_compute_cent.cpp  aclnn_compute_cent.h  compute_cent_def.cpp  compute_cent_tiling.cpp  compute_cent_tiling.h  compute_cent_tiling_register.cc
src/transformer/compute_cent/test/: CMakeLists.txt
src/transformer/incre_flash_attention/ophost/: CMakeLists.txt  aclnn_incre_flash_attention_v3.cpp  aclnn_incre_flash_attention_v3.h  aclnn_incre_flash_attention_v4.h  aclnn_incre_flash_attention_v5.cpp  aclnn_incre_flash_attention_v5.h  aclnn_sparse_paged_attention.cpp  incre_flash_attention_def.cpp  incre_flash_attention_tiling.cc  incre_flash_attention_tiling.h  incre_flash_attention_tiling_base.h  incre_flash_attention_tiling_check.cc  incre_flash_attention_tiling_register.cc
src/transformer/sparse_paged_attention/Test_Case_v5/: CMakeLists.txt  test_incre_flash_attention_v5.cpp
src/transformer/sparse_paged_attention/ophost/: CMakeLists.txt  aclnn_sparse_paged_attention.cpp  aclnn_sparse_paged_attention.h  fallback_sparse_paged_attention.cpp  sparse_paged_attention_def.cpp  sparse_paged_attention_tiling.cc  sparse_paged_attention_tiling.h  sparse_paged_attention_tiling_base.h  sparse_paged_attention_tiling_check.cc  sparse_paged_attention_tiling_mla.h  sparse_paged_attention_tiling_register.cc
tests/: cent_select.py  compute_cent.py  ifa_v5_case.py  ifa_v5_case_tkp.py  select_position.py  test_block_lookup.py  test_block_lookup_correct.py  test_block_lookup_final.py  test_block_lookup_fixed.py  test_idx.py  test_idx_optimized.py  utils.py
(+1275 files in other folders)
